Fixed animation of up and down arrows on accordion. Animation now works in unison of the accordion colapsing and retracting (before it would wait for the accordion to have colllapsed and then run the animation and visa versa). Changed the styling and responsive of the page (i.e. widths of certain items have been changed for smaller screen size devices). Added width properties to large tables. Now are scrolling across table not the accordion. - Works but not fully. When the table is reloaded (i.e. for completed requests) the scroll position is lost. This will need to be fixed. Also changed the order of divs in account.php and added in some new ones - It made more sense and helps with readability.

--- a/css/account.css
+++ b/css/account.css
@@ -13,6 +13,12 @@
     }
 }
 
+@media (max-width: 750px) {
+    #accordion {
+        width: 97.5%;
+    }
+}
+
 .gap {
     padding-top: 2.5%;
 }
@@ -123,7 +129,24 @@ button:hover {
     width:49.5%;
 }
 
+@media (max-width: 450px) {
+    #reset {
+        display:inline-block;
+        width:75%;
+    }
+    #tab2CSV {
+        display:inline-block;
+        width:75%;
+    }
+}
+
 #collapseRoD {
     max-height: 500px;
     overflow-y: scroll;
+}
+
+.tabWide {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
